# rust_python_experiment

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/backend/: Cargo.toml
src/backend/src/: lib.rs  main.py  main.rs  or_exit.rs
src/rust_canister_backend/: Cargo.toml
src/rust_canister_frontend/src/: index.html  index.js
