[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "c7faae9b22ce31a3ba1f2cc1cd3ad759b54ce100"}
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "c7faae9b22ce31a3ba1f2cc1cd3ad759b54ce100"}
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", rev = "c7faae9b22ce31a3ba1f2cc1cd3ad759b54ce100"}
rustpython-derive = { git = "https://github.com/RustPython/RustPython", rev = "c7faae9b22ce31a3ba1f2cc1cd3ad759b54ce100"}
rustpython-compiler-core = { git = "https://github.com/RustPython/RustPython", rev = "c7faae9b22ce31a3ba1f2cc1cd3ad759b54ce100"}
indoc = "2"
